simulation-wasm/check_output_3.txt
    Checking simulation-wasm v0.1.0 (/Users/max/Rust/Battlesim2/simulation-wasm)
warning: unused import: `uuid::Uuid`
 --> src/simulation.rs:2:5
  |
2 | use uuid::Uuid;
  |     ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `write_all` found for struct `File` in the current scope
  --> src/simulation.rs:40:35
   |
40 |                      let _ = file.write_all(log.as_bytes());
   |                                   ^^^^^^^^^
   |
  --> /rustc/ed61e7d7e242494fb7057f2657300d9e77bb4fcb/library/std/src/io/mod.rs:1835:8
   |
   = note: the method is available for `File` here
   |
   = help: items from traits can only be used if the trait is in scope
help: there is a method `write_all_at` with a similar name, but with different arguments
  --> /rustc/ed61e7d7e242494fb7057f2657300d9e77bb4fcb/library/std/src/os/unix/fs.rs:330:5
help: trait `Write` which provides `write_all` is implemented but not in scope; perhaps you want to import it
   |
 1 + use std::io::Write;
   |

error[E0599]: no method named `write_all` found for struct `File` in the current scope
  --> src/simulation.rs:49:39
   |
49 |                          let _ = file.write_all(log.as_bytes());
   |                                       ^^^^^^^^^
   |
  --> /rustc/ed61e7d7e242494fb7057f2657300d9e77bb4fcb/library/std/src/io/mod.rs:1835:8
   |
   = note: the method is available for `File` here
   |
   = help: items from traits can only be used if the trait is in scope
help: there is a method `write_all_at` with a similar name, but with different arguments
  --> /rustc/ed61e7d7e242494fb7057f2657300d9e77bb4fcb/library/std/src/os/unix/fs.rs:330:5
help: trait `Write` which provides `write_all` is implemented but not in scope; perhaps you want to import it
   |
 1 + use std::io::Write;
   |

warning: unused variable: `players_with_state`
   --> src/simulation.rs:336:13
    |
336 |     let mut players_with_state: Vec<Combattant> = players.iter().flat_map(|player| {
    |             ^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_players_with_state`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src/simulation.rs:336:9
    |
336 |     let mut players_with_state: Vec<Combattant> = players.iter().flat_map(|player| {
    |         ----^^^^^^^^^^^^^^^^^^
    |         |
    |         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0599`.
warning: `simulation-wasm` (lib) generated 3 warnings
error: could not compile `simulation-wasm` (lib) due to 2 previous errors; 3 warnings emitted
